added compile file endpoint
